--- a/fico-s4apps01/fixedassetprint/ui5-local.yaml
+++ b/fico-s4apps01/fixedassetprint/ui5-local.yaml
@@ -28,6 +28,8 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
+            destination: UMC_Dev_Customizing_BTP
+            authenticationType: BasicAuthentication
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
