--- a/sd-s4apps01/mta.yaml
+++ b/sd-s4apps01/mta.yaml
@@ -83,6 +83,10 @@ modules:
       - sdzdndatebatchupdate.zip
       name: sdzdndatebatchupdate
       target-path: resources/
+    - artifacts:
+      - sdsalesacceptresult.zip
+      name: sdsalesacceptresult
+      target-path: resources/
 - name: sdsalesacceptance
   type: html5
   path: salesacceptance
@@ -167,6 +171,15 @@ modules:
 - name: sdzdndatebatchupdate
   type: html5
   path: zdndatebatchupdate
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
+    - npm run build:cf
+    supported-platforms: []
+- name: sdsalesacceptresult
+  type: html5
+  path: salesacceptresult
   build-parameters:
     build-result: dist
     builder: custom
