20241203 MM-031 受入実績レポート

--- a/mm-s4apps01/poacceptance/webapp/manifest.json
+++ b/mm-s4apps01/poacceptance/webapp/manifest.json
@@ -34,6 +34,19 @@
           "localUri": "annotations/annotation.xml"
         }
       }
+    },
+    "crossNavigation": {
+      "inbounds": {
+        "poacceptance-display": {
+          "semanticObject": "poacceptance",
+          "action": "display",
+          "title": "{{flpTitle}}",
+          "signature": {
+            "parameters": {},
+            "additionalParameters": "allowed"
+          }
+        }
+      }
     }
   },
   "sap.ui": {
