--- a/sd-s4apps01/salesdocumentreport/ui5.yaml
+++ b/sd-s4apps01/salesdocumentreport/ui5.yaml
@@ -18,7 +18,7 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing
+            destination: UMC_Dev_Customizing_BTP
             authenticationType: BasicAuthentication
     - name: fiori-tools-appreload
       afterMiddleware: compression
