--- a/sd-s4apps01/salesdocumentreport/webapp/manifest.json
+++ b/sd-s4apps01/salesdocumentreport/webapp/manifest.json
@@ -66,7 +66,7 @@
         }
     },
     "sap.ui5": {
-        "flexEnabled": true,
+        "flexEnabled": false,
         "dependencies": {
             "minUI5Version": "1.124.9",
             "libs": {
