20241204 出荷伝票一括登録 bug修改

--- a/sd-s4apps01/batchcreationdn/webapp/manifest.json
+++ b/sd-s4apps01/batchcreationdn/webapp/manifest.json
@@ -103,7 +103,8 @@
         "settings": {
           "operationMode": "Server",
           "autoExpandSelect": true,
-          "earlyRequests": true
+          "earlyRequests": true,
+          "refreshAfterChange":false
         }
       }
     },
