20241205 MM-031 受入実績レポート

--- a/mm-s4apps01/poacceptance/webapp/manifest.json
+++ b/mm-s4apps01/poacceptance/webapp/manifest.json
@@ -136,7 +136,8 @@
               "controlConfiguration": {
                 "@com.sap.vocabularies.UI.v1.LineItem": {
                   "tableSettings": {
-                    "type": "GridTable"
+                    "type": "GridTable",
+                    "disableCopyToClipboard": true
                   }
                 }
               }
