--- a/sd-s4apps01/salesdocumentreport/webapp/manifest.json
+++ b/sd-s4apps01/salesdocumentreport/webapp/manifest.json
@@ -37,9 +37,9 @@
         },
         "crossNavigation": {
             "inbounds": {
-                "salesdocumentreport-Display": {
+                "salesdocumentreport-display": {
                     "semanticObject": "salesdocumentreport",
-                    "action": "Display",
+                    "action": "display",
                     "title": "{{flpTitle}}",
                     "signature": {
                         "parameters": {},
