--- a/pp-s4apps01/zroutingupload/xs-app.json
+++ b/pp-s4apps01/zroutingupload/xs-app.json
@@ -5,7 +5,7 @@
     {
       "source": "^/sap/(.*)$",
       "target": "/sap/$1",
-      "destination": "UMC_QAS",
+      "destination": "UMC_QAS_BTP",
       "authenticationType": "xsuaa",
       "csrfProtection": false
     },
