--- a/bc-s4apps01/zauthorityuserlist/webapp/manifest.json
+++ b/bc-s4apps01/zauthorityuserlist/webapp/manifest.json
@@ -115,6 +115,11 @@
           "pattern": "User({key}):?query:",
           "name": "UserObjectPage",
           "target": "UserObjectPage"
+        },
+        {
+          "name": "User__AssignRoleObjectPage",
+          "pattern": "User({key})/_AssignRole({_AssignRoleKey}):?query:",
+          "target": "User__AssignRoleObjectPage"
         }
       ],
       "targets": {
@@ -150,7 +155,25 @@
           "options": {
             "settings": {
               "editableHeaderContent": false,
-              "contextPath": "/User"
+              "contextPath": "/User",
+              "navigation": {
+                "_AssignRole": {
+                  "detail": {
+                    "route": "User__AssignRoleObjectPage"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "User__AssignRoleObjectPage": {
+          "type": "Component",
+          "id": "User__AssignRoleObjectPage",
+          "name": "sap.fe.templates.ObjectPage",
+          "options": {
+            "settings": {
+              "navigation": {},
+              "contextPath": "/User/_AssignRole"
             }
           }
         }
