--- a/fico-s4apps01/zpaymentmethod/ui5-local.yaml
+++ b/fico-s4apps01/zpaymentmethod/ui5-local.yaml
@@ -33,7 +33,8 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing
+            destination: UMC_Dev_Customizing_BTP
+            authenticationType: BasicAuthentication
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
