20241217 納受領書出力 添加字段

--- a/sd-s4apps01/deliveryreceipt/webapp/manifest.json
+++ b/sd-s4apps01/deliveryreceipt/webapp/manifest.json
@@ -172,6 +172,11 @@
                       "requiresSelection": true,
                       "text": "{i18n>delete}"
                     }
+                  },
+                  "columns": {
+                    "DataField::DeliveryReceiptNo": {
+                      "width": "8rem"
+                    }
                   }
                 }
               }
