--- a/pp-s4apps01/zpickinglist/ui5-mock.yaml
+++ b/pp-s4apps01/zpickinglist/ui5-mock.yaml
@@ -34,8 +34,12 @@ server:
             metadataXmlPath: ./webapp/localService/metadata.xml
             mockdataRootPath: ./webapp/localService/data
           - urlPath: /sap/opu/odata/sap/ZUI_PICKINGLIST_O2/
-            metadataPath: ./webapp/localService/metadata.xml
-            mockdataPath: ./webapp/localService/mockdata
+            generateMockData: true
+            metadataXmlPath: ./webapp/localService/metadata.xml
+            mockdataRootPath: ./webapp/localService/mockdata
+          - urlPath: /sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/
+            metadataPath: ./webapp/localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml
+            mockdataPath: ./webapp/localService/ZUI_PERMISSION_ACCESS_O4/mockdata
             generateMockData: true
         annotations:
           - localPath: ./webapp/localService/mainService_Annotation.xml
