--- a/fico-s4apps01/paidpaycalculation/webapp/manifest.json
+++ b/fico-s4apps01/paidpaycalculation/webapp/manifest.json
@@ -42,6 +42,15 @@
                 "settings": {
                     "localUri": "localService/mainService_Annotation.xml"
                 }
+            },
+            "AuthorityService": {
+                "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+                "type": "OData",
+                "settings": {
+                    "annotations": [],
+                    "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+                    "odataVersion": "4.0"
+                }
             }
         },
         "crossNavigation": {
@@ -104,6 +113,16 @@
             },
             "AddonConfig": {
                 "dataSource": "zui_tbc1001_o4",
+                "preload": true,
+                "settings": {
+                    "synchronizationMode": "None",
+                    "operationMode": "Server",
+                    "autoExpandSelect": true,
+                    "earlyRequests": true
+                }
+            },
+            "Authority": {
+                "dataSource": "AuthorityService",
                 "preload": true,
                 "settings": {
                     "synchronizationMode": "None",
