--- a/pp-s4apps01/ofpartition/ui5-local.yaml
+++ b/pp-s4apps01/ofpartition/ui5-local.yaml
@@ -27,7 +27,7 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing_BTP
+            destination: UMC_Dev_Customizing
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
