--- a/sd-s4apps01/salesacceptance/webapp/manifest.json
+++ b/sd-s4apps01/salesacceptance/webapp/manifest.json
@@ -42,6 +42,15 @@
           "localUri": "localService/zui_tbc1001_o4/metadata.xml",
           "odataVersion": "4.0"
         }
+      },
+      "AuthorityService": {
+          "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+          "type": "OData",
+          "settings": {
+              "annotations": [],
+              "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+              "odataVersion": "4.0"
+          }
       }
     },
     "crossNavigation": {
@@ -131,6 +140,16 @@
           "autoExpandSelect": true,
           "earlyRequests": true
         }
+      },
+      "Authority": {
+          "dataSource": "AuthorityService",
+          "preload": true,
+          "settings": {
+              "synchronizationMode": "None",
+              "operationMode": "Server",
+              "autoExpandSelect": true,
+              "earlyRequests": true
+          }
       },
       "@i18n": {
         "type": "sap.ui.model.resource.ResourceModel",
