--- a/sd-s4apps01/salesacceptresult/webapp/manifest.json
+++ b/sd-s4apps01/salesacceptresult/webapp/manifest.json
@@ -42,6 +42,15 @@
         "settings": {
           "localUri": "localService/mainService_Annotation.xml"
         }
+      },
+      "AuthorityService": {
+          "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+          "type": "OData",
+          "settings": {
+              "annotations": [],
+              "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+              "odataVersion": "4.0"
+          }
       }
     },
     "crossNavigation": {
@@ -117,6 +126,16 @@
           "autoExpandSelect": true,
           "earlyRequests": true
         }
+      },
+      "Authority": {
+          "dataSource": "AuthorityService",
+          "preload": true,
+          "settings": {
+              "synchronizationMode": "None",
+              "operationMode": "Server",
+              "autoExpandSelect": true,
+              "earlyRequests": true
+          }
       }
     },
     "resources": {
