FICO-006 仕訳印刷 权限检查

--- a/fico-s4apps01/zaccountingdoc/webapp/manifest.json
+++ b/fico-s4apps01/zaccountingdoc/webapp/manifest.json
@@ -51,6 +51,15 @@
           "localUri": "localService/ZAPI_TFI_1012_O4/metadata.xml",
           "odataVersion": "4.0"
         }
+      },
+      "AuthorityService": {
+        "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+        "type": "OData",
+        "settings": {
+          "annotations": [],
+          "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+          "odataVersion": "4.0"
+        }
       }
     },
     "crossNavigation": {
@@ -133,6 +142,16 @@
           "earlyRequests": true
         }
       },
+      "Authority": {
+        "dataSource": "AuthorityService",
+        "preload": true,
+        "settings": {
+          "synchronizationMode": "None",
+          "operationMode": "Server",
+          "autoExpandSelect": true,
+          "earlyRequests": true
+        }
+      },
       "@i18n": {
         "type": "sap.ui.model.resource.ResourceModel",
         "uri": "i18n/i18n.properties"
@@ -179,8 +198,8 @@
                   "actions": {
                     "Action1": {
                       "press": "fico.zaccountingdoc.ext.listExtension.ListExtension.onPrint1",
-                      "visible": true,
-                      "enabled": true,
+                      "visible": true, 
+                      "enabled": "{local>/authorityCheck/button/Export}",
                       "requiresSelection": true,
                       "text": "{i18n>i18nprint}"
                     }
