--- a/pp-s4apps01/zcomponentusagelist/webapp/manifest.json
+++ b/pp-s4apps01/zcomponentusagelist/webapp/manifest.json
@@ -33,6 +33,15 @@
         "settings": {
           "localUri": "localService/ZUI_COMPONENTUSAGELIST_O2_VAN.xml"
         }
+      },
+      "AuthorityService": {
+        "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+        "type": "OData",
+        "settings": {
+            "annotations": [],
+            "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+            "odataVersion": "4.0"
+        }
       }
     },
     "crossNavigation": {
@@ -95,6 +104,16 @@
         "dataSource": "mainService",
         "preload": true,
         "settings": {}
+      },
+      "Authority": {
+        "dataSource": "AuthorityService",
+        "preload": true,
+        "settings": {
+            "synchronizationMode": "None",
+            "operationMode": "Server",
+            "autoExpandSelect": true,
+            "earlyRequests": true
+        }
       }
     },
     "resources": {
