--- a/fico-s4apps01/zaccountingdoc/webapp/manifest.json
+++ b/fico-s4apps01/zaccountingdoc/webapp/manifest.json
@@ -155,6 +155,10 @@
       "@i18n": {
         "type": "sap.ui.model.resource.ResourceModel",
         "uri": "i18n/i18n.properties"
+      },
+      "local": {
+        "type": "sap.ui.model.json.JSONModel",
+        "preload": true
       }
     },
     "resources": {
@@ -200,7 +204,6 @@
                       "press": "fico.zaccountingdoc.ext.listExtension.ListExtension.onPrint1",
                       "visible": true, 
                       "enabled": "{local>/authorityCheck/button/Export}",
-                      "requiresSelection": true,
                       "text": "{i18n>i18nprint}"
                     }
                   }
